; ModuleID = '/home/carl/AnghaBench/mpv/options/extr_m_option.c_multiply_double.c'
source_filename = "/home/carl/AnghaBench/mpv/options/extr_m_option.c_multiply_double.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8*, double)* @multiply_double to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @multiply_double(i32* %0, i8* %1, double %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca double, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store double %2, double* %6, align 8
  %7 = load double, double* %6, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = bitcast i8* %8 to double*
  %10 = load double, double* %9, align 8
  %11 = fmul double %10, %7
  store double %11, double* %9, align 8
  %12 = load i32*, i32** %4, align 8
  %13 = load i8*, i8** %5, align 8
  %14 = call i32 @clamp_double(i32* %12, i8* %13)
  ret void
}

declare dso_local i32 @clamp_double(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
